Improve command handing and add basic block display creation syntax